@@ -57,6 +57,7 @@ public:
     virtual void updateCursor(const QCursor& cursor);
 #endif
 
+    virtual QPalette palette() const;
     virtual int screenNumber() const;
     virtual WId winId() const;
 
@@ -104,6 +105,11 @@ void QWebViewPrivate::updateCursor(const QCursor& cursor)
     view->setCursor(cursor);
 }
 #endif
+
+QPalette QWebViewPrivate::palette() const
+{
+    return view->palette();
+}
 
 int QWebViewPrivate::screenNumber() const
 {
